[migration_20230327] (#5139)
* [migration_20230327] Cleanup mvn arguments

* [migration_20230327] Add infinispan recipe

* [migration_20230327] Fixing jpmml recipe

* [migration_20230327] Fixing jpmml recipe - add required jar

* [migration_20230327] Fixing jpmml recipe

* [migration_20230327] Restore jpmml version

* [migration_20230327] Add/rename patches

* [migration_20230327] Fix patch apply

* [migration_20230327] Renaming patches as per PR request

* [migration_20230327] Add documentation