@@ -9,7 +9,7 @@ quarkus_version=${QUARKUS_VERSION:-3.0.0.Alpha5}
 quarkus_file="${script_dir_path}/quarkus3.yml"
 project_version='quarkus-3-SNAPSHOT'
 
-export MAVEN_OPTS="-Xmx16192m -XX:MaxPermSize=512m"
+export MAVEN_OPTS="-Xmx16192m"
 
 echo "Update project with Quarkus version ${quarkus_version}"
 
